@@ -67,6 +67,11 @@ LanguageTool Change Log
      which is not supported anymore
     -ContractionSpellingRule.isDictionaryBasedSpellingRule() now returns false
 
+-embedded server:
+    -The HTTP server now also accepts a --config option so that the maximum request size
+     can be limited with the 'maxTextLength' parameter (this used to be working only
+     for the HTTPS server)
+
 -GUI:
     -Improved configuration dialog
     -Allow the user to change the font of the main editing area
